--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -245,6 +245,8 @@ Error message and password prompt
 
 <li>Cumberlandisme</li>
 
+<li>current bookmarks</li>
+
 <li>Delavier &amp; spiritualité</li>
 
 <li>dés</li>
@@ -396,6 +398,8 @@ Error message and password prompt
 <li>Vaccins : zéro d’enquête sur France 3</li>
 
 <li>valeurs</li>
+
+<li>Violences policières &amp; état fascisant</li>
 
 <li>Week</li>
 
@@ -9350,7 +9354,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20191119093217495" list="Hypnomachie Home" modified="20191122163928043" title="$:/StoryList">
+<div created="20191209084530341" list="[[Books / livres]] [[current bookmarks]] pw magic Home" modified="20191213132600912" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9410,8 +9414,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20191122163923217" title="$:/temp/search">
-<pre>hypn</pre>
+<div created="20190114084246125" modified="20191213132559575" title="$:/temp/search">
+<pre>books</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9636,8 +9640,12 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20191018121828245" tags="epub download" title="Books / livres">
-<pre>! Jovanovic
+<div created="20190131165226977" modified="20191213133343779" tags="epub download" title="Books / livres">
+<pre>! Cédric O
+* Alice Zeniter - L'Art de Perdre
+* Léonardo Padura - L'homme qui aimait les chiens (roman : histoire croisée de Trotski et son assassin)
+* Don Winslow - La Griffe du Chien 'The Power of the Dog' (roman cartels vs CIA)
+! Jovanovic
 * ''Howard Bloom - Le Principe De Lucifer''
 ! ''Pedocomplotisme''
 * Douglas De Coninck - 30 témoins morts
@@ -10186,6 +10194,74 @@ Apprendre le cumberlandisme
 
 Avec de l’entraînement, vous serez capable de dessiner ce que pense une personne rien qu’avec le contact de la main de celle-ci sur votre propre bras. Cela prend du temps, mais ce n’est pas irréalisable. N’oubliez pas que la clé du succès est le travail, donc un seul mot d’ordre : travail ! 
 Si vous travaillez suffisamment vous serez en mesure d’accomplir des choses jusqu’alors inimaginables pour vous. </pre>
+</div>
+<div created="20191211083824320" modified="20191211100059622" tags="tmp" title="current bookmarks">
+<pre>* https://www.ecoledirecte.com/login?camefrom=%2F1%2F7130%2FMessagerie
+* https://greenspector.com/fr/articles/2018-12-11-manifeste-developpement-plus-durable/
+* https://fr.wikipedia.org/wiki/Esprit_quantique	Roger Penrose &amp; Stuart Hameroff
+* https://00f.net/2019/11/03/stop-using-low-dns-ttls/
+* https://morgenthum.dev/articles/why-prefer-fp
+* https://www.linkedin.com/jobs/view/1022609764/?recommendedFlavor=IN_NETWORK&amp;midToken=AQGMDDNHYWwdUQ&amp;trkEmail=eml-jobs_jymbii_digest-null-2-null-null-5a3syb%7Ejyg25vts%7E65-null-jobs%7Eview
+
+* file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/TiddlyWiki.html#
+* file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/leno.frbb.net.html
+
+* https://melchior.xcard.me/rfid_devices/
+* https://myedenred.fr/
+
+* https://blog.juliobiason.net/thoughts/things-i-learnt-the-hard-way/
+* file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/dev/How%20to%20be%20a%20Programmer.html
+* file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/The%20Project%20Gutenberg%20eBook%20of%20Sharps%20and%20Flats,%20by%20John%20Nevil%20Maskelyne.htm
+* https://github.com/lenopgm/notes
+* https://www.percko.com/en/shop/second-skin-lyne-up-noir-2/
+* https://fr.wikipedia.org/wiki/Esprit_quantique	Roger Penrose &amp; Stuart Hameroff
+* https://ripsave.com/
+* https://lew.la/
+* http://slimedaughter.com/games/twine/wtwla/
+
+! Ethique
+* https://opensource.com/alternatives/evernote
+* https://www.mobicoop.fr/
+* https://pour-un-reveil-ecologique.org/fr/reveiller-sa-formation/
+* https://lowtechskol.org/formation/
+* https://medium.com/low-tech-lab-les-news/baptiste-22-ans-ing%C3%A9nieur-low-tech-explorer-au-br%C3%A9sil-50570c145fa9
+
+! Job
+* https://www.cadremploi.fr/editorial/conseils/conseils-candidature/cv/detail/article/le-cv-parfait.html?een=6521d925a6321f55cbead44654b0882f&amp;seen=6
+* https://www.cadremploi.fr/editorial/conseils/conseils-candidature/entretien-embauche/detail/article/les-20-questions-les-plus-courantes-en-entretien-dembauche.html?een=6521d925a6321f55cbead44654b0882f&amp;seen=6
+
+! Dev
+* http://sametmax.com/stack-python-en-2019/
+* https://stackoverflow.com/questions/350404/how-do-the-proxy-decorator-adapter-and-bridge-patterns-differ
+* https://www.amcharts.com/demos/#maps
+* https://kotlinlang.org/docs/tutorials/
+* https://openclassrooms.com/fr/courses/5353106-initiez-vous-a-kotlin/5353113-decouvrez-l-histoire-de-kotlin
+* https://blog.zenika.com/2018/04/05/ma-premiere-application-spring-boot-2-avec-kotlin/
+* https://spring.io/guides/tutorials/spring-boot-kotlin/
+* https://fr.wikipedia.org/wiki/Illusions_de_l%27informatique_distribu%C3%A9e
+
+* https://bbs.spamgourmet.com/viewtopic.php?f=5&amp;t=1785&amp;sid=3455674fa3ff723e0ced325d5b373543&amp;start=30
+
+! VMC
+* https://www.inc-conso.fr/content/logement/logement-insalubre-ou-indecent-des-exemples-jurisprudentiels
+* https://www.18h39.fr/articles/locataire-ou-proprietaire-qui-est-responsable-du-bon-fonctionnement-de-la-vmc.html
+
+! Jeux todo ?
+* Mass Effect 2 (2010)
+* Fallout: New Vegas (2010)
+* Portal 2 (2011)
+* XCOM: Enemy Unknown (2012)
+* &gt;&gt; Spelunky (2013)
+* Deadly Premonition (2013)
+* &gt;&gt; Nidhogg (2014)
+* &gt; NEO Scavenger (2014)
+* &gt; Invisible, Inc. (2015)
+* Divinity: Original Sin 2 (2017)
+* &gt; Star Traders: Frontiers (2018)
+* &gt; Into The Breach (2018)
+* &gt; Ape Out (2019)
+
+</pre>
 </div>
 <div created="20190529145458196" modified="20190830154142741" tags="spiritualité delavier" title="Delavier &amp; spiritualité">
 <pre>Delavier:
@@ -11071,8 +11147,12 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20191119164356866" tags="magic current" title="magic">
-<pre>! work: 
+<div created="20190322143324937" modified="20191213104819347" tags="magic current" title="magic">
+<pre>! TODO books
+* By forces unseen: The innovative card magic of Ernest Earick 
+* 
+
+! work: 
 * squeeze @4'50 - 5'28 https://www.youtube.com/watch?v=gmo5aJNBFEM
 * himber count
 * retention vanish
@@ -11698,7 +11778,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * World's Greatest Magic 1-4
 * James Randi Secret of The Psychics</pre>
 </div>
-<div created="20190130144059269" modified="20191015103009026" tags="pw" title="pw">
+<div created="20190130144059269" modified="20191213090557669" tags="pw" title="pw">
 <pre>```
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
 aliexpress =&gt; ali.s.lx.n 6/19
@@ -11751,6 +11831,7 @@ fnac =&gt; fnac.s.lemoine@xoxy.net 8/19
 ecoledirecte.com =&gt; sjlemoine 9/19
 mondebio =&gt; mondebio.s.lemoine@xoxy.net 9/19
 cgb.fr =&gt; s.l@y.c 10/19
+riotgames.net =&gt; lenopgm / groudaf 12/19
 ```
 </pre>
 </div>
@@ -12724,6 +12805,37 @@ Universalisme. Objectif : compréhension, estime, tolérance et protection du bi
  
 
 Une version antérieure de la théorie des valeurs (Schwartz, 1992) émettait l’hypothèse d’une onzième valeur de base quasi universelle : la spiritualité. L’objectif des valeurs de spiritualité est le sens, la cohérence et l’harmonie intérieures, obtenus en transcendant la réalité quotidienne. Si la question du sens ultime est un besoin humain de base, alors la spiritualité doit être une valeur de base que l’on doit retrouver dans toutes les sociétés. Des items permettant d’approcher la spiritualité, recueillis dans des travaux très variés, ont donc été intégrés à l’enquête sur les valeurs. Les voici : une vie spirituelle, sens de la vie, harmonie intérieure, détachement ainsi que [unité avec la nature, acceptant ma part dans la vie, religieux]. Toutefois, les données empiriques montrent que la spiritualité n’est pas une valeur dont la signification est comprise de façon similaire dans toutes les cultures.</pre>
+</div>
+<div created="20191211095838709" modified="20191211095900544" tags="" title="Violences policières &amp; état fascisant">
+<pre>Je viens de me faire interpeller, intimider et menacer par un policier qui a récupéré mon adresse, et ce pays me terrifie.
+J'arrive aux Halles, je tombe sur l'interpellation musclée d'une jeune femme qui hurle qu'elle a mal au coeur, ne peut plus respirer.
+Je décide de filmer l'interpellation, au cas où. Un policier me repère et demande ma pièce d'identité, en précisant qu'une plainte sera déposée.
+Je demande pourquoi : le policier prétexte la minorité (totalement présumée) de l'interpellée et me reproche de vouloir diffuser son image.
+J'explique que je filme simplement des policiers dans l'exercice de leurs fonctions.
+Il donne mon ID à un autre policier, bien plus tendu... (pâle, nerveux et en sueur suite à l'interpellation) pour qu'il la note. Celui-ci m'accuse de n'avoir rien de mieux à faire que de filmer plutôt que de rentrer chez moi, et de vouloir les soumettre aux réseaux sociaux.
+Je lui demande l'article de loi qui m'interdit de filmer la police et justifie que je sois interpellé pour cela.
+Il m'explique qu'il est policier et qu'il connaît donc mieux la loi, et que de toute façon &quot;la roue tourne&quot;.
+Je demande ce qu'il entend par là, et il dit &quot;vous m'avez très bien compris, la roue tourne&quot;.
+Donc évidemment je sais très bien à quoi il fait référence (au bruit des bottes, on va pas faire semblant).
+Puis il enchaîne en disant qu'aux États-Unis, pour l'avoir filmé, je serais &quot;déjà par terre avec une balle dans ma tête&quot;.
+J'avoue avoir eu un petit frisson, parce qu'il n'était pas vraiment chill.
+Du coup je lui demande s'il est en train de me menacer, il se contente de dire &quot;non mais la roue tourne. menacer c'est pas ça ! achetez un dictionnaire... ou un bescherelle, ça coûte pas cher hein...!&quot;
+Bref à la fin il a noté mon nom et mes coordonnées et m'a rendu ma carte. Je lui ai demandé son matricule. Il a refusé de me le donner &quot;et bah du coup non vous ne l'aurez pas&quot;.
+Bon, j'insiste un peu, et je rappelle que la loi l'y oblige. Il me rétorque que &quot;bah non, vous voyez, je vous le donne pas&quot;.
+J'insiste encore, et cette fois il me menace pour de bon. Je suis apparement dans un &quot;espace sécurisé&quot; et je &quot;gêne une opération de police en cours&quot;. Il prend une posture menaçante et fait mine de vouloir m'interpeller.
+Je me barre.
+Bref, un policier regrettant de vivre dans un pays où le filmer ne me vaut pas &quot;une balle dans la tête&quot; possède mon nom et mon adresse.
+Je n'ai pas son nom ni son matricule.
+
+Ce policier viole déjà la loi, rien ne l'empêche de continuer en donnant mon adresse à des tiers.
+(au pif, ses potes fafs)
+Bref, c'est de l'intimidation, purement et simplement.
+La police menace.
+La police fiche illégalement.
+La police ne répond de rien.
+Le pire, c'est que je m'estime heureux que c'en soit resté là.
+Je m'estime heureux !
+Ce pays est fucked up.</pre>
 </div>
 <div created="20190108085325311" modified="20190201155125598" tags="todo" title="Week">
 <pre>! 1
