--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9348,13 +9348,13 @@ Error message and password prompt
 <div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20190814110641004" title="$:/state/tab/moresidebar-1850697562">
+<div created="20190108104722609" modified="20191219140245978" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20191209084530341" list="[[Books / livres]] [[current bookmarks]] pw magic Home" modified="20191213132600912" title="$:/StoryList">
+<div created="20191219133607584" list="pedo-criminalité [[current bookmarks]] Home" modified="20191219140255269" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9414,8 +9414,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20191213132559575" title="$:/temp/search">
-<pre>books</pre>
+<div created="20190114084246125" modified="20191219133600671" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10195,8 +10195,11 @@ Apprendre le cumberlandisme
 Avec de l’entraînement, vous serez capable de dessiner ce que pense une personne rien qu’avec le contact de la main de celle-ci sur votre propre bras. Cela prend du temps, mais ce n’est pas irréalisable. N’oubliez pas que la clé du succès est le travail, donc un seul mot d’ordre : travail ! 
 Si vous travaillez suffisamment vous serez en mesure d’accomplir des choses jusqu’alors inimaginables pour vous. </pre>
 </div>
-<div created="20191211083824320" modified="20191211100059622" tags="tmp" title="current bookmarks">
-<pre>* https://www.ecoledirecte.com/login?camefrom=%2F1%2F7130%2FMessagerie
+<div created="20191211083824320" modified="20191219133856028" tags="tmp" title="current bookmarks">
+<pre>* https://mart-e.be/post/2019/12/17/anki-et-lapprentissage-par-repetition-espacee/
+* https://www.chiasma.co/
+
+* https://www.ecoledirecte.com/login?camefrom=%2F1%2F7130%2FMessagerie
 * https://greenspector.com/fr/articles/2018-12-11-manifeste-developpement-plus-durable/
 * https://fr.wikipedia.org/wiki/Esprit_quantique	Roger Penrose &amp; Stuart Hameroff
 * https://00f.net/2019/11/03/stop-using-low-dns-ttls/
@@ -11441,7 +11444,7 @@ le fondement logiquement premier de tout ce qui existe - ce peut être particuli
 * sexe
 * anus</pre>
 </div>
-<div created="20190725121652596" modified="20190726084953106" tags="maçonnerie pedo todo" title="pedo-criminalité">
+<div created="20190725121652596" modified="20191219140329692" tags="maçonnerie pedo todo" title="pedo-criminalité">
 <pre>* No 7 : PEDO-CRIMINALITE : https://www.youtube.com/playlist?list=PLNqpj0IGr43AogFsIF7WyriYKbyddY4bH
 * affaire Epstein : https://www.youtube.com/playlist?list=PLNqpj0IGr43BnTpCMnrYatI7cmWKqLK1B
 *''Amidlisa '': http://rendeznousnosenfants.org/ftprendez/amidlisa/
@@ -11475,6 +11478,14 @@ le fondement logiquement premier de tout ce qui existe - ce peut être particuli
 * Vivre l'enfer, abus rituels sataniques en allemagne
 * Satanisme et personnalités multiples
 * Témoignage de Véronique Liaigre victime d'un réseau pédosatanique
+
+! Pédocriminalité sectaire en réseau #pédosatanisme - Extrait du livre &quot;The New Satanists&quot; 
+
+&lt;&lt;&lt;
+Dans son livre &quot;The New Satanists&quot;, Linda Blood (Ancienne membre du Temple de Set et ancienne maîtresse de Michael Aquino) rapporte le témoignage d'un certain Bill Carmody qui est le pseudonyme d'un instructeur supérieur du renseignement au FLETC (Federal Law Enforcement Training Center) :
+Carmody a enquêté pendant un certain temps sur des disparitions d'enfants qui semblaient  reliées à des activités sectaires. En tant que membre d'une équipe spécialisée, il a mené une enquête sur un réseau qui opérait dans plusieurs états du Sud-Ouest des États-Unis. Carmody a ainsi pu infiltrer au total trois cultes satanistes criminels. Carmody a déclaré à propos de ces sectes : &quot;Celles qui sont les plus sérieuses sont celles qui sont les plus dissimulées et couvertes, en effet ces clans ont des organisations très sophistiquées tout en ayant les meilleurs moyens de communication, il s'agit d'un réseau international.&quot; Carmody déclare que ces groupes se livrent au trafic de stupéfiants, d'armes et d'êtres humains, ainsi qu'à la pédo-pornographie (...) Selon lui, les cultes criminels les mieux organisés sont dirigés par des gens intelligents et très éduqués, il s'agit de personnes venant des classes supérieures de la société où elles occupent des postes importants dans leur communauté, des positions dites &quot;respectables&quot;. Ces groupes sectaires constituent une sous-culture très secrète qui relève de la pègre au sens le plus large. Ils sont généralement composés de membres de familles transgénérationelles dont les liens de sang aident à maintenir le silence et le secret. - &quot;The New Satanists&quot; - Linda Blood, 1994, p.29-30﻿
+&lt;&lt;&lt;
+
 
 ! Chaque fois c'est exactement le même scénario:
 # 1/ Affaire Dutroux, c'est Regina Louf qui affabule. Malgré de nombreux témoins.  Tous les notables ne sont pas appréhendés.  Et deux policiers qui ont enquêtés normalement sont poursuivis en pénal pour dénonciation calomnieuse.
