--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9354,7 +9354,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20191219133607584" list="pedo-criminalité [[current bookmarks]] Home" modified="20191219140255269" title="$:/StoryList">
+<div created="20200113144503896" list="Torrent [[Books / livres]] Home" modified="20200113152946318" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9373,7 +9373,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/AY003829/Downloads/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9393,7 +9393,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/AY003829/Downloads/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9405,17 +9405,17 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1600&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         }
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20191219133600671" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20200113152942857" title="$:/temp/search">
+<pre>download</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9640,8 +9640,14 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20191213133343779" tags="epub download" title="Books / livres">
-<pre>! Cédric O
+<div created="20190131165226977" modified="20200113144953764" tags="epub download" title="Books / livres">
+<pre>! Frak Lepage
+* Keith Dixon - les évangélistes du marché 
+! Lilian AUSY - cyberpunk
+* Greg Egan - Le Crystal
+* Robert Silverberg
+* Bruce Sterling
+! Cédric O
 * Alice Zeniter - L'Art de Perdre
 * Léonardo Padura - L'homme qui aimait les chiens (roman : histoire croisée de Trotski et son assassin)
 * Don Winslow - La Griffe du Chien 'The Power of the Dog' (roman cartels vs CIA)
@@ -11789,8 +11795,9 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * World's Greatest Magic 1-4
 * James Randi Secret of The Psychics</pre>
 </div>
-<div created="20190130144059269" modified="20191213090557669" tags="pw" title="pw">
+<div created="20190130144059269" modified="20200113143029954" tags="pw" title="pw">
 <pre>```
+FREEBOX =&gt; 1/20
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
 aliexpress =&gt; ali.s.lx.n 6/19
 impots.gouv.fr =&gt; 1200125072181 / i 5/17
@@ -11801,10 +11808,11 @@ paypal =&gt; 8/17 ebay.s.lemoine@xoxy.net
 ebay =&gt; 3/18 ebay.s.lemoine@xoxy.net
 illicado =&gt; 1/18 illicado.s.lemoine@xoxy.net
 amazon =&gt; 1/14 amazon.s.lemoine@xoxy.net
-intra.ausy.fr =&gt; 11/17
+intra.ausy.fr =&gt; 11/17 || 1/20
+webmail.ausy.fr =&gt; 1/20
 coffreo.com =&gt; samuel.lemoine@yahoo.com 8/18 
 facebook.com =&gt; 7/17
-yahoo.com =&gt; 8/17
+yahoo.com =&gt; 1/20
 9gag =&gt; 9gag14.osef.osef@xoxy.net 12/14
 spamgourmet.net
     leno.dalton =&gt; 4/17
@@ -11843,6 +11851,7 @@ ecoledirecte.com =&gt; sjlemoine 9/19
 mondebio =&gt; mondebio.s.lemoine@xoxy.net 9/19
 cgb.fr =&gt; s.l@y.c 10/19
 riotgames.net =&gt; lenopgm / groudaf 12/19
+linkedin =&gt; 1/20
 ```
 </pre>
 </div>
@@ -12509,7 +12518,7 @@ Pierre Kropotkine
 
 </pre>
 </div>
-<div created="20190424130007767" modified="20190906130534577" tags="todo torrent download" title="Torrent">
+<div created="20190424130007767" modified="20200113153241210" tags="todo torrent download" title="Torrent">
 <pre>! Misc
 * Erasemybackpain / Back to Life : https://www.erasemybackpain.com/ https://www.youtube.com/watch?v=Fr2dGwCfNaY
 * JM Corda / Sexworkout : https://www.jmcorda.com/fr/  sextao
@@ -12520,12 +12529,17 @@ Pierre Kropotkine
 * Mass Effect
 
 ! Films
-* La Parole - film danois
-* Grave - FR 2017
+* ''La Planète des Singes''
+* ''Les Autres / Los Otros / The Others Alejandro Amenábar''
+* ''Les Enfants du Temps - Makoto Shinkai''
+* ''L'Extraordinaire Voyage de Marona - Anca Damian''
+* ''La Parole - film danois''
 * Knights of Badassdom
 * Le magicien des mensonges Robert de Niro
 
 ! Séries
+* ''The OA''
+* ''Aletered Carbon''
 * Starwars Rebels
 * Firefly
 * Le Prince des Dragons
@@ -12541,15 +12555,13 @@ Pierre Kropotkine
 
 ! Magic
 * ''NOWHERE by Tri Ryuzaki''
-* ''ReTURNtion by Moritz Mueller''
-* ''Cultural Xchange Shoot Ogawa Apollo Robins''
+ Apollo Robins''
 * ''How To Do Coin Magic by Zee''
 * The Silver Edge - Kim Andersen ellusionist (using Kreis Magnetic US Half Dollar)
 * Fucking coin de Clément Kerstenne et Philippe Bougart
 * ~~Evanesce by Eric Jones~~
 * ''Ultimate Magician Collection''
 * epub Sharps and Flats, subtitled A Complete Revelation of the Secrets of Cheating at Games of Chance and Skill
-* Eric Chien
 * Modern Flap Card by Hondo
 * Shin Lim (The Switch / 52 Shades of Red)
 * Goshman Spellbound
@@ -12559,12 +12571,10 @@ Pierre Kropotkine
 * ~~''Eric Jones - Metal''~~
 *  Al Schneider Magic (book)
 * volume 1 of David Roth's Expert Coin Magic Made Easy
-* ''Jay Sankey 'revolutionary coin magic'''
 * Marions quick pitch 
 * Marion Boykin Short Pockets / ReViSiTed
 * Marion Boykin : Copper Silver INC, Double Trouble, FlySki, Crimp Change - REDUX
 * Cultural Exchange DVD Shoot and Apollo (I &amp; II)
-* Sansmind
 * Matchbox Mambo - The effect and method is same as Bob Ostin's &quot;Clear Deception&quot; put out many years ago, the gimmick looks same as well
 * Mastering the Art of Pickpocketing - James Coats &amp; Nicholas Byrd
 * Extreme Burn 2.0
