--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -239,6 +239,8 @@ Error message and password prompt
 
 <li>Conscience &amp; temps &amp; spi</li>
 
+<li>Consensus</li>
+
 <li>contacts, adresses</li>
 
 <li>CSS</li>
@@ -330,6 +332,8 @@ Error message and password prompt
 <li>Mickey Silver's Coin Retention Vanish (Silver's Ultimate Vanish) 'The Move'</li>
 
 <li>Monique Pinçon-Charlot : Casse sociale, le début ?</li>
+
+<li>Mos Majorum</li>
 
 <li>Movies</li>
 
@@ -9354,7 +9358,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200113144503896" list="Torrent [[Books / livres]] Home" modified="20200113152946318" title="$:/StoryList">
+<div created="20200115093555991" list="[[Mentalisme / hypnose :]] Consensus pw Home" modified="20200115143406870" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9414,8 +9418,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200113152942857" title="$:/temp/search">
-<pre>download</pre>
+<div created="20190114084246125" modified="20200115143405177" title="$:/temp/search">
+<pre>mentali</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10098,6 +10102,44 @@ Sortir de son corps, un phénomène objectivable (OBE)
 &lt;&lt;&lt;
 
 </pre>
+</div>
+<div created="20200115140143574" modified="20200115140212919" tags="" title="Consensus">
+<pre>http://education3.canalblog.com/archives/2019/11/04/37762793.html
+
+&lt;&lt;&lt;
+« Un consensus est un accord des volontés sans aucune opposition formelle. Le consensus se distingue de l'unanimité qui met en évidence la volonté manifeste de tous les membres dans l'accord. Un consensus caractérise l'existence parmi les membres d'un groupe d'un accord général (tacite ou manifeste), positif et unanime pouvant permettre de prendre une décision ou d'agir ensemble sans vote préalable ou délibération particulière. » Wikipedia
+&lt;&lt;&lt;
+
+
+A moins d’être aveugle, sourd et sans mémoire, il est évident que le vote comme moyen de prendre une décision  collective et concernant chaque membre d’une communauté ne fait que satisfaire la fameuse majorité de cette communauté, lésant de fait une minorité. D’où luttes, dans les débats ou après les débats, développement de tous les moyens pour « gagner » dans ce qui n’est plus qu’une compétition, revanches quand la minorité devient majorité, etc. Dans les luttes électorales ce ne sont pas des idées ou des propositions qui s’affrontent mais des porteurs d’opinions, la victoire et le pouvoir qui lui est lié revenant aux plus malins, aux plus charismatiques et à ceux qui disposent de plus de moyens.
+
+Lorsque la majorité devient incertaine, il y a alors le compromis. C’est l’exercice favori de tous nos politiciens. Vous mélangez du blanc et du noir et vous obtenez du gris. Les compromis ne prennent aucune direction, n’assument rien, laissent la situation en l’état, ouvrent la voie à la compromission. On accepte ceci si en contrepartie on obtient cela. La corruption s’alimente (entre autre) aussi des compromis.
+
+Resterait alors le consensus à obtenir, tel il est défini dans wikipédia. Impossible dit-on ! Comment voulez-vous que des personnes différentes, aux intérêts différents et contradictoires s’accordent sur des décisions qui les satisferaient toutes ? Utopie. D’où « Laissez faire les élites »… qu’en plus on vous aura fait élire. 
+
+J’aime bien la définition du consensus vital en physiologie : Interdépendance de plusieurs organes dans l'accomplissement des fonctions vitales (CNRTL). Pour le rapporter à ce qui serait alors des corps sociaux, c'est-à-dire des communautés (sociales, économiques, territoriales, éducatives…) faudrait-il encore que chaque membre de ces communautés ait la conscience d’appartenir à un corps, de contribuer à le faire vivre avec d’autres tout en bénéficiant de sa vie. Les interdépendances entre des membres égaux (absence de dominance) caractérisent toutes les espèces sociales. Comment les quelques dizaines de milliers d’abeilles d’un essaim, après le retour simultané de quelques centaines d’éclaireuses et d’après les informations qu’elles communiquent, décident en quelques minutes d’aller s’installer dans telle cavité et pas dans une autre ? Le consensus semble bien être le mode décisionnel des espèces sociales et nous en serions une, quoique tout démontre que nous n’en sommes encore qu’au stade grégaire. Mais comment l’obtiennent-elles ?
+
+Ce sont encore les enfants dans nos classes uniques de 3ème type qui nous en donné quelques clefs. Nous n’utilisions pas le vote, les décisions étaient prises dans ce qui était devenu une culture du consensus. On cherche diverses modalités, parfois savantes ou compliquées, pour arriver à des consensus alors qu’il s’agit d’abord d’une culture qui n’est certes pas celle de nos sociétés. Je dégagerai 5 points de notre vécu.
+
+- 1. Le premier point c’est la taille des structures qui doivent rester compatibles avec les capacités relationnelles de celles et ceux qui les composent, avec leurs possibilités de se percevoir dans le groupe, de percevoir les autres du groupe, de percevoir le groupe, avec la possibilité d’être reconnus et de reconnaître les autres. Pour rester dans l’exemple des abeilles, celles-ci ont toujours limité la taille de leurs colonies qui ne dépassent jamais 50 000 individus, même lorsque les ressources florales sont abondantes ou la cavité (ou ruche) où elles sont installées est vaste. Avec des enfants de 4 à 11 ans dans une structure autonome, c'est-à-dire qui va autogérer sa vie dans les interdépendances de chacun, nous avons pu constater que, suivant l’espace disponible, le nombre maximum se situait aux alentours de 25. Suivant les structures sociales (communautés éducatives avec des adolescents, villages, quartiers, entreprises autogérées, communautés agricoles, économiques…) le nombre est variable mais il y a toujours une limite au-delà de laquelle elles ne peuvent plus constituer des entités pouvant s’autogérer c'est-à-dire prendre des décisions consensuelles.
+
+- 2. La permanence de la communication dans l’espace commun. La vie d’une communauté ne dépend pas du seul espace-temps dédié à la prise de décision collective. C’est la vie quotidienne de chacun dans la communauté qui fait apparaître la nécessité de prendre une décision collective. Autrement dit le moment d’une prise de décision n’est que l’aboutissement d’une infinité d’interactions et d’interrelations ayant lieu dans la vie quotidienne de la communauté. Il n’y a pas que le nombre de personnes interagissant dans le même espace qui importe, il y a aussi la dimension de cet espace dans lequel toutes les rencontres peuvent avoir lieu en permanence. Dans une école du 3ème type avec la liberté des activités dans l’occupation de l’espace et la nécessité de l’autogérer, avec la mobilité des enfants, avec les intérêts que peuvent provoquer ce que font les uns ou les autres, la communication est permanente. C’est cette communication qui permet l’indispensable reconnaissance des uns par les autres sans laquelle il est impossible de constituer une entité capable de s’orienter, d’orienter sa vie, de s’auto-organiser.
+
+- 3. L’écoute active. C’est bien parce qu’il y a des opinions différentes ou divergentes face à une décision à prendre que la notion de consensus apparait. Plutôt que défendre une opinion, il s’agit de l’argumenter. L’établissement d’un consensus dépend d’abord de l’écoute des arguments. Mais une écoute non pas pour les réfuter mais pour les comprendre, comprendre le contexte et les intérêts de ceux qui les émettent. C’est une écoute qui questionne l'autre tout en questionnant les opinions différentes, qui fait aller au-delà des simples opinions. Il ne s'agit plus de faire triompher ou de démolir des opinions, il s'agit d'en chercher la validité de ce qui les fondent. 
+
+Chaque argument est toujours justifié par un point de vue (point d’où l’on regarde, d’où l’on émet), la vision d’ensemble d’une situation dépend donc de différents points de vue. D’où aussi l’importance de l’hétérogénéité (multi-âge pour une école du 3ème type). Dans l’échange des points de vue dans une écoute active, la vision de la situation par chacun est toujours modifiée elle devient une vision collective sans laquelle aucune décision collective ne peut être prise.
+
+- 4. Un consensus n’est jamais définitif. À tel problème posé il y a toujours plusieurs solutions possibles. Au moment du choix, on ne sait jamais si c’est le meilleur. Un consensus peut être trouvé lorsque chacun sait qu’il pourra être remis en cause, reformulé lorsque des faits démentiront sa pertinence ou son efficience pour la vie du collectif et de chacun dans ce collectif. C’est ce principe accepté qui a permis dans ma classe unique d’abord la discussion avec tous les parents, puis leur adhésion à ce qui n’était d’abord qu’un essai, ensuite l’évolution de la situation de départ vers ce que ni eux ni moi nous attendions : une école du 3ème type !
+
+Je n’hésite pas à transposer ce que nous avons vécu avec des enfants dans les classes uniques de 3ème type à la société en général. Avec le mouvement des Gilets jaunes il s’est fortement dessiné l’idée que c’était d’abord au niveau local, au niveau des assemblées citoyennes communales que les transformations sociétales pouvaient commencer. Les quatre points que j’ai mis en avant sont soit existants (petites structures), soit peuvent être mis en pratique.
+
+Oui, mais vous me direz à juste raison que toutes les structures sociales sont interdépendantes, ne peuvent vivre en autarcie, sont incluse dans des ensembles plus vastes. Là encore la vie de nos écoles en réseaux nous apporte des éléments de réponse : toutes nos entités étaient en communication permanente (courrier, journaux, messageries par minitel d’abord puis internet, rencontres, voyages-échanges…). Il y avait bien la connaissance et la reconnaissance de ce que chacune de ces entités était, faisait, interaction entre elles, activités communes pouvant être réalisées, mutualisation de certains moyens, idées partagées…[1]  Le réseau constituait ainsi une autre entité, plus fluide, mais s’autogérant naturellement au bénéfice et de par la vie de chacun de ses composants.
+
+Les Gilets jaunes suivent ce chemin avec leurs réseaux sociaux, leur assemblée des assemblées !
+
+- 5. Je rajouterais un dernier point, le consensus dans la non opposition. Nous avions constitué une association des petites écoles pour lutter contre leur éradication et promouvoir le caractère « futuriste » de ce qui s’y faisait : les Centres de Recherche des Petites Structures et de la Communication (CREPSC). Cette association s’était constituée et s’élargissait par cooptation, s’autogérait par une assemblée générale permanente grâce à une liste de diffusion. Il n’y avait pas de président ou de CA : suivant les besoins des luttes chacun pouvant prendre le titre qu’il voulait dans les relations avec les autorités ou institutions simplement en prévenant les autres (délégué départemental, délégué national, directeur de recherche, secrétaire… !). Et surtout chacun pouvait faire une proposition d’action argumentée à l’assemblée (à la liste de diffusion). S’il y avait opposition, elle aussi argumentée, c’était discuté. Si l’opposition n’était pas levée la proposition était abandonnée. S’il n’y avait pas d’opposition, le proposeur se lançait (c’est celui qui dit qui fait !). Si quelques autres adhéraient fortement et en avaient la possibilité, l’action était préparée et engagée par un petit collectif. L’ensemble était informé régulièrement au fur et à mesure de l’avancée du projet, les autres apportaient éventuellement en cours de route leur aide, leurs idées suivant leurs moyens, leurs disponibilités. Et c’est ainsi que nous avons réalisé au cours d’une dizaine d’années de lutte, sans aucun moyen financier, trois colloques nationaux, un colloque international, créé une revue bénéficiant du routage de la poste, créé un serveur télématique pour le réseau d’écoles, instigué une association européenne de défense des petites écoles,…
+
+Le consensus est d’abord une culture qui s’acquière et se construit quotidiennement… sur le terrain !    </pre>
 </div>
 <div created="20190514151529572" modified="20190514152333697" tags="contacts" title="contacts, adresses">
 <pre>* mixam85@gmail.com
@@ -11292,9 +11334,13 @@ Nous ne faisons que suivre ce qui est écrit a l’avance par la configuration i
 Si nous ne sommes qu'en fin de comptes que des automates conscient d’exister, nous devons néanmoins tendre vers la liberté, c'est a dire se soumettre a Dieu ou aux lois physique du mondes.
 Qui se soumet a Dieu ne vit que pour aimer et servir Dieu, Dieu qui prend conscience de lui-même en l'homme et qu'on ne peux aimer et servir qu'en aimant et servant les hommes, c'est a dire soi-même.</pre>
 </div>
-<div created="20190726084209569" modified="20190726084316441" tags="hypnose" title="Mentalisme / hypnose :">
+<div created="20190726084209569" modified="20200115143550637" tags="hypnose" title="Mentalisme / hypnose :">
 <pre>Derren Brown
-</pre>
+
+! Sankey advices https://www.youtube.com/watch?v=xEkbCJMnE1Y :
+* present it like an ''experimentation'' rather than a demonstration
+* turn it around : can ''they'' devine my prediction ?
+* this experiment reveals our shared reallity</pre>
 </div>
 <div created="20190417094219575" modified="20190426090544270" tags="coinmagic magic" title="Mickey Silver's Coin Retention Vanish (Silver's Ultimate Vanish) 'The Move'">
 <pre>https://www.themagiccafe.com/forums/viewtopic.php?topic=59604&amp;forum=3&amp;start=60
@@ -11356,6 +11402,16 @@ micmsilver@aol.com</pre>
 * sociale (réseau de connaissances, maîtrise des langues)
 * symbolique (notoriété du nom, corps altier)
 </pre>
+</div>
+<div created="20200114111634986" modified="20200114111719282" tags="" title="Mos Majorum">
+<pre>! Mos Majorum
+* PIETAS &gt; devoir envers la famille &amp; la nation
+* FIDES &gt; être droit &amp; honnête avec ses voisins
+* MAJESTAS &gt; dignité &amp; fierté de son identité
+* VIRTUS &gt; vaillance, excellence, courage, charisme &amp; capacité à galvaniser
+* GRAVITAS &gt; disciple, rigueur, ponctualité, ordre, sens du devoir, sérieux dans les affaires, rigueur
+* CONSTANTIA &gt; constance, stabilité, stoïcisme
+* FRUGALITAS &gt; simplicité, minimalisme, ascétisme</pre>
 </div>
 <div created="20190206142550125" modified="20190327152024726" tags="improve" title="Movies">
 <pre>* Get Out (2017)
@@ -11872,7 +11928,7 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20191001091721993" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20200114094341470" tags="quotes" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
 L'Homme n'a pas de racines, il a des pieds - Salman Rushdie
 &lt;&lt;&lt;
@@ -12020,6 +12076,39 @@ qui permet l'habitat.
 L'Être donne des possibilités,
 c'est par le Non-Être qu'on les utilise 
 &lt;&lt;&lt;
+
+! Marc Aurèle
+
+&lt;&lt;&lt;
+You have power inside your mind, not outside events. Realize this and you will find strength.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+It is silly to try to escape other people's faults. They are inescapable. Just try to escape your own.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+If anyone can refute me (show me i'm making a mistake or looking at things from the wrong perspective), I'll gladly change. It's the truth I'm after, and the truth never harmed anyone. What harms us it to persist in self-deceit and ignorance.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+I was once a fortunate man but at soe point furtune abandoned me. But true good fortune is what you make for yourself. Good fortune : good character, good intentions, and good actions.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+You see how few things you have to do to live a satisfying and reverent life ?
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+It can ruin your life only if it ruins your character. Otherwise, it cannot harm you - inside or out.
+&lt;&lt;&lt;
+
+
 
 
 ! Jacques Attali
