--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9358,7 +9358,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200115093555991" list="[[Mentalisme / hypnose :]] Consensus pw Home" modified="20200115143406870" title="$:/StoryList">
+<div created="20200116093454201" list="pw Home" modified="20200116093454201" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9418,8 +9418,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200115143405177" title="$:/temp/search">
-<pre>mentali</pre>
+<div created="20190114084246125" modified="20200116131152595" title="$:/temp/search">
+<pre>resources</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10823,8 +10823,11 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190906094801627" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200116131245658" tags="home current" title="Home">
 <pre>cute https://twitter.com/i_iove_nature
+
+! Daily
+* https://www.epicgames.com/store/ epicgames.osef.osef@xoxy.net 7/19
 
 ! current
 * ''https://tgdmb.com/'' The Gaming Den - Frank Trollman
@@ -10876,10 +10879,6 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 ! Food
 * https://myedenred.fr/
 * https://melchior.xcard.me
-* http://www.jenaimequetoi.fr/
-* http://peps-restaurants.fr/menu-livraison-nantes-saint-herblain-orvault/
-* Heyless https://www.facebook.com/pg/heyless.nantes.saint.herblain.zenith/posts/?ref=page_internal
-
 
 ```
 https://orientxxi.info/fr/video
