--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9358,7 +9358,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200116093454201" list="pw Home" modified="20200116093454201" title="$:/StoryList">
+<div created="20200120102140098" list="Home" modified="20200120102140098" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9418,8 +9418,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200116131152595" title="$:/temp/search">
-<pre>resources</pre>
+<div created="20190114084246125" modified="20200120102138606" title="$:/temp/search">
+<pre>quotes</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10823,11 +10823,17 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200116131245658" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200120104612989" tags="home current" title="Home">
 <pre>cute https://twitter.com/i_iove_nature
 
 ! Daily
 * https://www.epicgames.com/store/ epicgames.osef.osef@xoxy.net 7/19
+
+! Buy
+* https://www.jmcorda.com/fr/rituel-du-matin
+* https://www.jmcorda.com/fr/dominationbylove
+* https://www.gold.fr/cours-or-prix-de-l-or/napoleon-or-20-francs-louis-or/
+* https://www.gold.fr/comptoirs-achat-vente-or/nantes/
 
 ! current
 * ''https://tgdmb.com/'' The Gaming Den - Frank Trollman
@@ -11927,8 +11933,14 @@ linkedin =&gt; 1/20
 
 * https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20200114094341470" tags="quotes" title="Quotes, citations">
-<pre>&lt;&lt;&lt;
+<div created="20190529145620246" modified="20200120102156155" tags="quotes" title="Quotes, citations">
+<pre>
+&lt;&lt;&lt;
+&quot;Le propre du sage est de se gouverner soit même, sans vouloir gouverner les autres. De là il est clair que, ce ne seront pas les &quot;meilleurs&quot; qui gouverneront.&quot; Alain.
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
 L'Homme n'a pas de racines, il a des pieds - Salman Rushdie
 &lt;&lt;&lt;
 
